# grepy

./: README.md  chuy.json  pyproject.toml
.github/workflows/: codeql-analysis.yml  pytests.yml
grepy/: __init__.py  __main__.py  core.py
tests/: test_data.py
