[tool.poetry]
name = "grepy"
version = "0.1.0"
description = "A Grep clone"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UltiRequiem/grep"
repository = "https://github.com/UltiRequiem/grep"
keywords = ["commands", "utilities", "cli","grep"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
pylint = "^2.10.2"

[tool.poetry.scripts]
chuy = 'grepy:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
